[package]
name = "cepack"
version = "0.1.0"
authors = ["jan"]
edition = "2018"
description = "Statically unpacks Cheat Engine trainers"
license = "Unlicense"
repository = "https://github.com/not-wlan/cepack"
homepage = "https://github.com/not-wlan/cepack"
readme = "README.md"

[dependencies]
pelite = "0.9"
inflate = "*"
quick-error = "1.2.2"
byteorder = "*"
